@@ -1,5 +1,5 @@
 require("prototypes.override-final.base-quality")
-require("prototypes.override-final.undo-quality-bonuses")
+require("prototypes.override-final.negative-quality")
 require("prototypes.override-final.meltdown")
 require("prototypes.override-final.module")
 require("prototypes.override-final.porting")
