@@ -6,7 +6,7 @@ Inverted-Quality-downgrade-port=Downgrader port
 Inverted-Quality-burner-assembling-machine=Burner assembling machine
 
 [entity-description]
-Inverted-Quality-meltdown-facility=Melts down items into 1/8 their Nominal base materials.
+Inverted-Quality-meltdown-facility=Melts down items into 1/8 their Normal base materials.
 Inverted-Quality-downgrade-port=Reduces the quality of inserted items by one tier.
 
 [item-name]
