@@ -1,5 +1,4 @@
 [quality-name]
-normal=Nominal
 scuffed=Scuffed
 funky=Funky
 defective=Defective
